--- a/templates/g5_helium/custom/scss/main.css
+++ b/templates/g5_helium/custom/scss/main.css
@@ -98,10 +98,10 @@ body {
 
 /* Connexion */
 .view-login.gantry > #g-page-surround {
-    background-image: var(--display-digital-testing), var(--display-candidate-button);
-    background-position: top 120px left 20px, bottom 50px right 20px;
-    background-repeat : no-repeat, no-repeat;
-    background-size : 25%, 25%;
+    background-image: var(--display-digital-testing), var(--display-candidate-button), url("/media/com_emundus/images/tchoozy/backgrounds/corner-bottom-left-background.svg"), url("/media/com_emundus/images/tchoozy/backgrounds/corner-top-right-background.svg");
+    background-position: top 120px left 20px, bottom 50px right 20px, bottom 0 left 0, top 0 right 0;
+    background-repeat : no-repeat, no-repeat, no-repeat, no-repeat;
+    background-size : 25%, 25%, 50%, 50%;
     overflow: hidden;
 }
 
